<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="10dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_img"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/iv_img"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/iv_img"
        android:text="@string/space" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/time" />

</RelativeLayout>